--- a/documentation/dataflow specs/0.orchestrator.md
+++ b/documentation/dataflow specs/0.orchestrator.md
@@ -1,50 +1,63 @@
-# Module Spec: Orchestrator.py
+# Module Spec: orchestrator.py
 
 ## 1. Module Overview
 - **Name / ID:** `orchestrator`  
-- **Purpose:** Coordinates execution of all modules, handles logging and error handling.  
+- **Purpose:** Coordinates execution of all modules, handles logging, error handling, and pushes logs/config updates to GitHub.  
 - **Author / Date:** Paul – 21 Jan 2026  
 
 ## 2. Upstream Dependencies
 - GitHub Actions environment  
 - Environment variables:
-  - `GITHUB_TOKEN`
-  - `GITHUB_REPOSITORY`
-  
+  - `GITHUB_TOKEN` – for pushing files to GitHub  
+  - `GITHUB_REPOSITORY` – repository path  
+- `config.json` – configuration file for workflow parameters  
+
 ## 3. Downstream Dependencies
-- Modules: `1.file_retrieval`, `2.data_transformation`, `3.api_dict_update`, `4.data_quality`, `5.data_update` 
+- Modules executed via `run_module`:
+  - `modules/1.file_retrieval.py`
+  - `modules/2.transform_data.py`
+  - `modules/0.retention_policy.py`  
 
 ## 4. Inputs / Sources
-- Log file path
-- Config.json file
-- Secrets (DB credentials, API keys) 
+- Config file (`config.json`)  
+- Environment variables and secrets (GitHub token, repository info, DB credentials, API keys)  
+- Existing log files for tracking previous runs  
 
 ## 5. Outputs
-- Workflow log file (`workflow.log`)  
-- Results from individual modules loaded into GitHub  
+- Timestamped workflow log file (e.g., `data and logs/workflow_YYYYMMDD_HHhMM.log`)  
+- Updated `config.json` with `last_run_date`  
+- Logs and config files pushed to GitHub  
 
 ## 6. Logic / Steps
-1. Initialise logging
-2. Retrieve parameters from config.json
-3. Execute modules sequentially:  
-   - `1.file_retrieval` → `2.data_transformation` → `3.api_dict_update` → `4.data_quality` → `5.data_update`
-4. Conditional checks:
-   - Stop workflow if critical module fails  
-5. Log start and finish time of each module
+1. Create `data and logs` directory if it does not exist  
+2. Generate timestamp for log and config updates  
+3. Initialise logging with timestamp, severity, and module identifier  
+4. Load config file (`config.json`)  
+5. Execute modules sequentially using `run_module`:
+   - `modules/1.file_retrieval.py`  
+   - `modules/2.transform_data.py`  
+   - `modules/0.retention_policy.py`  
+6. For each module:
+   - Log start and end of execution  
+   - Handle non-critical skips (return code 10 → log and continue)  
+   - Capture errors, log stderr, push log to GitHub, and exit workflow if critical  
+7. Update `config.json` with `last_run_date`  
+8. Push updated log file and config file to GitHub  
 
-## 7. Conditional checks:
-1. File Retrieval
-   - Has the file already been retrieved?
-   - Is the file available?
-2. ETL
-   - Has the data already been transformed?
-3. API
-   - Has the data already been retrieved?
-4. DQC (Data Quality Check)
-   - Do we already have DQC results on the most recent data?
-6. Update
-   - Has the database already been updated?
-## 7. Error Handling & Logging
-- Wrap module calls in `try/except`  
-- Log all exceptions with severity  
-- Optional notifications for errors  
+## 7. Conditional Checks
+- Module can signal skip via return code 10 (conditions not met)  
+- Errors trigger:
+  - Logging of stderr output  
+  - Push of log file to GitHub  
+  - Workflow exit if critical  
+
+## 8. Error Handling & Logging
+- All module executions wrapped in `try/except`  
+- Logs include timestamp, severity (`INFO`, `ERROR`), module name, and message  
+- Errors are logged with `logger.exception` and pushed to GitHub  
+- Non-critical failures allow workflow to continue or log skip messages  
+
+## 9. Helper Functions
+- `run_module(module_path)` – executes a module as a subprocess, handles logging, skips, and error capture  
+- `push_file_to_repo(file_path, commit_message)` – adds, commits, and pushes a file to GitHub using `GITHUB_TOKEN`  
+- `save_log_and_config()` – writes updated config to JSON, pushes log and config files to GitHub  
