--- a/documentation/dataflow specs/1.file_retrieval.md
+++ b/documentation/dataflow specs/1.file_retrieval.md
@@ -75,5 +75,9 @@
 - Git operations wrapped in `try/except`  
 - Exceptions logged with stack trace  
 - Non-critical exits use `sys.exit(10)` to avoid orchestrator failure  
-- Critical failures re-raised for orchestrator handling  
+- Critical failures re-raised for orchestrator handling
+
+## 9. Helper Functions
+- `push_file_to_repo(file_path, commit_message)` – adds, commits, and pushes a file to GitHub using `GITHUB_TOKEN`  
+- `save_log_and_config()` – writes updated config to JSON, pushes log and config files to GitHub  
 - Logger includes timestamp, severity, and module identifier
