--- a/documentation/dataflow specs/2.data_transformation.md
+++ b/documentation/dataflow specs/2.data_transformation.md
@@ -1,8 +1,8 @@
-# Module Spec: Data Transformation – Fuel Check
+# Module Spec: 2.data_transformation.py
 
 ## 1. Module Overview
 - **Name / ID:** `2.data_transformation.py`  
-- **Purpose:** Cleans, standardises, expands, and prepares Fuel Check price data into a complete daily time series ready for database loading.  
+- **Purpose:** Cleans, expands, and standardises monthly Fuel Check data into a complete daily price time series and loads it into the staging table.  
 - **Author / Date:** Paul – 21 Jan 2026  
 
 ## 2. Upstream Dependencies
@@ -10,99 +10,151 @@
 - File retrieval module (`1.file_retrieval.py`)  
 - GitHub Actions environment  
 - Environment variables:
-  - `DB_CONNECTION_STRING`  
+  - `DB_CONNECTION_STRING`
+- `config.json`
 
 ## 3. Downstream Dependencies
-- Data quality module  
-- Database update module  
+- Retention policy module (`0.retention_policy.py`)  
+- Any downstream reporting or production load processes  
 
 ## 4. Inputs / Sources
-- **CSV file:** Output from Module 1  
-  - Path: `data and logs/`
+- **CSV file:**  
+  - Path: `data and logs/`  
   - Naming: `fuelcheck_<mon><year>.csv`
-- **Database table:** `dbo.fuelcheck`  
-  - Used for historical comparison (last month only)
+- **Database tables:**
+  - `public.fuel_prices`
+  - `dim_fuel_station_dict`
 - **Config file:** `config.json`
   - `latest_file`
+  - `last_transformation`
 - **Command-line arguments:**
-  - `--log-file`
+  - `--log-file` (provided by orchestrator)
 
 ## 5. Outputs
-- Transformed dataset written to database:
-  - Table: `dbo.fuelcheck_staging`
+- Transformed dataset inserted into:
+  - Table: `fuelprice_staging`
+- Updated `config.json`
+  - `last_transformation`
 - Workflow logs written to shared log file
+
+---
 
 ## 6. Logic / Steps
 
-### Block 1 – Base Cleaning
-1. Initialise module logging using orchestrator-provided log file  
-2. Load latest CSV file based on `config.json`
-3. Select required columns:
-   - `ServiceStationName`
-   - `Address`
-   - `Brand`
-   - `FuelCode`
-   - `PriceUpdatedDate`
-   - `Price`
-4. Fill missing non-price attributes where possible
-5. Convert:
-   - `PriceUpdatedDate` to `date` (strip time component)
+### Pre-Check
+1. Exit early (`sys.exit(10)`) if:
+   - `latest_file == last_transformation`  
+   - Prevents duplicate transformations.
+
+---
+
+### Block 1 – Import & Base Cleaning
+2. Read CSV file using `latest_file`
+3. Forward-fill missing values (handles vertically merged Excel cells)
+4. Convert `PriceUpdatedDate` → `datetime`
+5. Create normalized `date` column (time removed)
+6. Log row count
+
+---
 
 ### Block 2 – Entity Resolution
-6. From Block 1:
-   - Select **distinct** combinations of:
-     - `ServiceStationName`
-     - `Address`
-     - `FuelCode`
-7. From database:
-   - Load **last month only** records from `dbo.fuelcheck`
-   - Select same distinct columns
-8. Union both datasets to produce full entity list
+7. Convert column names to lowercase
+8. Identify distinct combinations:
+   - `servicestationname`
+   - `address`
+   - `fuelcode`
+9. Query database for existing station/fuel combinations:
+   - Join `public.fuel_prices` with `dim_fuel_station_dict`
+10. Union both datasets and remove duplicates
 
-### Block 3 – Date Expansion
-9. Determine date range:
-   - `min_date = earliest PriceUpdatedDate - 1 day`
-   - `max_date = latest PriceUpdatedDate`
-10. Generate date spine covering full range
-11. Cross join:
-   - Entity list (Block 2)
-   - Date spine
-12. Sort by:
-   - `ServiceStationName`
-   - `Address`
-   - `FuelCode`
-   - `Date`
+---
 
-### Block 4 – Price Completion
-13. Aggregate Block 1 prices:
-   - Group by:
-     - `ServiceStationName`
-     - `Address`
-     - `FuelCode`
-     - `PriceUpdatedDate`
-   - Aggregate:
-     - `avg(Price)`
-14. Left join aggregated prices to expanded dataset
-15. Left join previous month prices (last day only) for backfill seed
-16. Forward-fill prices per station and fuel
-17. Drop rows with null prices after forward fill
-18. Drop records belonging to the previous month
-19. Write final dataset to `dbo.fuelcheck_staging`
+### Block 3 – Date Expansion & Aggregation
+11. Generate full date range:
+   - From `(min(date) - 1 day)`  
+   - To `max(date)`
+12. Cross join:
+   - Station/fuel combinations
+   - Date range
+13. Sort by:
+   - `servicestationname`
+   - `address`
+   - `fuelcode`
+   - `date`
+14. Aggregate current month prices:
+   - Group by station/fuel/date
+   - Calculate **median(price)** per day
+
+---
+
+### Block 4 – Price Completion & Final Output
+
+#### Part 1 – Seed & Merge
+15. Calculate last day of previous month
+16. Query previous month prices (last day only)
+17. Left join:
+   - Daily median prices
+   - Previous month seed prices
+18. Combine prices using:
+   - `price_x.fillna(price_y)`
+19. Create `priceupdateddate` where price exists
+
+#### Part 2 – Forward Fill & Filtering
+20. Forward-fill prices per:
+   - `servicestationname`
+   - `address`
+   - `fuelcode`
+21. Drop rows with null prices
+22. Remove previous month records
+23. Keep only current month data
+
+#### Part 3 – Record ID Generation
+24. Create deterministic `record_id`:
+   - Concatenate:
+     - `servicestationname`
+     - `address`
+     - `fuelcode`
+     - `price`
+     - `date`
+   - Apply MD5 hash
+25. Select and order final columns:
+   - `record_id`
+   - `servicestationname`
+   - `address`
+   - `fuelcode`
+   - `date`
+   - `price`
+   - `priceupdateddate`
+26. Log final row count
+
+---
+
+### Block 5 – Database Load
+27. Insert into:
+   - `fuelprice_staging`
+   - `if_exists='append'`
+28. Update `config.json`:
+   - Set `last_transformation = latest_file`
+29. Commit updated config to GitHub
+30. Log completion
+
+---
 
 ## 7. Conditional Checks
-1. **Missing input file**
-   - If expected CSV does not exist
-   - Raise exception
-2. **Empty dataset**
-   - If no rows after transformation
-   - Raise exception
-3. **Date range sanity**
-   - If min date > max date
-   - Raise exception
+1. **Already transformed**
+   - Exit with code 10 if file already processed
+2. **Database failures**
+   - Logged and raised
+3. **Transformation failures**
+   - Logged with stack trace
+   - Re-raised for orchestrator handling
+
+---
 
 ## 8. Error Handling & Logging
-- Log entry and exit of each block
-- Row counts logged after each major transformation
-- Database operations wrapped in `try/except`
+- All major blocks logged
+- Row counts logged after major transformations
+- SQL queries executed via SQLAlchemy engine
 - Exceptions logged with stack trace
-- Critical failures re-raised for orchestrator handling
+- Non-critical skip uses `sys.exit(10)`
+- Critical failures bubble up to orchestrator
