--- a/documentation/dataflow specs/2.data_transformation.md
+++ b/documentation/dataflow specs/2.data_transformation.md
@@ -157,4 +157,11 @@
 - SQL queries executed via SQLAlchemy engine
 - Exceptions logged with stack trace
 - Non-critical skip uses `sys.exit(10)`
+
+## 9. Helper Functions
+- `last_day_of_previous_month(any_date)` - Calculates the last day of the previous month based on a given date.
+- `generate_md5_hash(value: str)` - Generate an MD5 hash for a given string.
+- `push_file_to_repo(file_path, commit_message)` – adds, commits, and pushes a file to GitHub using `GITHUB_TOKEN`  
+- `save_log_and_config()` – writes updated config to JSON, pushes log and config files to GitHub  
+- Logger includes timestamp, severity, and module identifier
 - Critical failures bubble up to orchestrator
