--- a/documentation/dataflow specs/2.data_transformation.md
+++ b/documentation/dataflow specs/2.data_transformation.md
@@ -22,8 +22,8 @@
   - Path: `data and logs/`  
   - Naming: `fuelcheck_<mon><year>.csv`
 - **Database tables:**
-  - `public.fuel_prices`
-  - `dim_fuel_station_dict`
+  - `fact_fuel_prices`
+  - `dim_fuel_stations`
 - **Config file:** `config.json`
   - `latest_file`
   - `last_transformation`
@@ -64,7 +64,7 @@
    - `address`
    - `fuelcode`
 9. Query database for existing station/fuel combinations:
-   - Join `public.fuel_prices` with `dim_fuel_station_dict`
+   - Join `fact_fuel_prices` with `dim_fuel_stations`
 10. Union both datasets and remove duplicates
 
 ---
@@ -131,7 +131,7 @@
 
 ### Block 5 – Database Load
 27. Insert into:
-   - `fuelprice_staging`
+   - `stg_fuel_price`
    - `if_exists='append'`
 28. Update `config.json`:
    - Set `last_transformation = latest_file`
