--- a/documentation/dataflow specs/3.API_Integration.md
+++ b/documentation/dataflow specs/3.API_Integration.md
@@ -1,7 +1,7 @@
 # Module Spec: 3.station_dictionary_sync.py
 
 ## 1. Module Overview
-- **Name / ID:** `3.station_dictionary_sync.py`  
+- **Name / ID:** `3.API_Integration.py`  
 - **Purpose:**  
   Synchronises the FuelCheck API station reference data with the internal station dictionary.  
   Identifies new stations, inactive stations, and station updates (name or address changes), and loads the results into temporary tables for downstream processing.  
@@ -23,12 +23,10 @@
 ---
 
 ## 3. Downstream Dependencies
-- Stored procedure:
-  - `dev.truncate_temp_station_tables()`
 - Dictionary maintenance process that consumes:
-  - `dev.temp_new_stations`
-  - `dev.temp_updated_stations`
-  - `dev.temp_inactive_stations`
+  - `stg_new_stations`
+  - `stg_updated_stations`
+  - `stg_inactive_stations`
 - Any downstream processes dependent on updated station metadata
 
 ---
@@ -42,17 +40,17 @@
   `https://api.onegov.nsw.gov.au/FuelCheckRefData/v2/fuel/lovs`
 
 ### Database Table
-- `dev.fuel_station_dict`
+- `dim_fuel_stations`
   - Active stations only (`WHERE active = TRUE`)
 
 ---
 
 ## 5. Outputs
 
-### Temporary Tables (dev schema)
-- `temp_new_stations`
-- `temp_updated_stations`
-- `temp_inactive_stations`
+### Temporary Tables
+- `stg_new_stations`
+- `stg_updated_stations`
+- `stg_inactive_stations`
 
 ### Logging
 - Execution logs written to GitHub Actions log stream
@@ -93,8 +91,7 @@ The module then retrieves the active station dictionary from the database and pe
 
 Before inserting results, the module:
 
-- Executes `dev.truncate_temp_station_tables()` to clear existing temp data.
-- Inserts detected changes into the respective temporary tables.
+- Inserts detected changes into the respective staging tables.
 
 No direct updates are performed on the main dictionary table within this module.
 
