--- a/documentation/dataflow specs/3.API_Integration.md
+++ b/documentation/dataflow specs/3.API_Integration.md
@@ -107,29 +107,9 @@ No direct updates are performed on the main dictionary table within this module.
 ---
 
 ## 8. Error Handling & Logging
+- Log all major steps, decisions, and URLs accessed  
+- Git operations wrapped in `try/except`  
+- Exceptions logged with stack trace  
+- Non-critical exits use `sys.exit(10)` to avoid orchestrator failure  
+- Critical failures re-raised for orchestrator handling
 
-- API requests wrapped in try/except with HTTP error handling.
-- Database calls wrapped in exception handling.
-- Failures propagate to the orchestrator (non-zero exit).
-- Each execution generates:
-  - Unique transaction ID (UUID)
-  - UTC timestamp
-
----
-
-## 9. Cloud Deployment Considerations
-
-For GitHub Actions deployment:
-
-- Replace hardcoded credentials with environment variables.
-- Replace localhost connection string with `${DB_CONNECTION_STRING}`.
-- Remove embedded secrets from code.
-- Use structured logging instead of print statements.
-- Store API credentials in GitHub Secrets.
-
----
-
-## 10. Exit Behaviour
-
-- Successful execution → exit code 0  
-- Failure → non-zero exit code (workflow fails)
