Remove outdated sections from data quality documentation
Removed sections on error handling, cloud deployment, and exit behavior from data quality documentation.

--- a/documentation/dataflow specs/4.data_quality.md
+++ b/documentation/dataflow specs/4.data_quality.md
@@ -82,24 +82,9 @@
 ---
 
 ## 9. Error Handling & Logging
+- Log all major steps, decisions, and URLs accessed  
+- Git operations wrapped in `try/except`  
+- Exceptions logged with stack trace  
+- Non-critical exits use `sys.exit(10)` to avoid orchestrator failure  
+- Critical failures re-raised for orchestrator handling
 
-- Database connection wrapped in try/except
-- Procedure execution errors logged
-- Critical failures propagate to orchestrator
-- Workflow logs include timestamps for execution start and completion
-
----
-
-## 10. Cloud Deployment Considerations
-
-- Replace any local connection strings with `DB_CONNECTION_STRING` from environment variables
-- Ensure GitHub Actions or cloud runner has appropriate database network access
-- Logging integrates with GitHub Actions logs
-- Stored procedure must exist and be accessible by workflow user
-
----
-
-## 11. Exit Behaviour
-
-- Successful execution → exit code 0  
-- Failure → non-zero exit code (workflow fails)
