--- a/documentation/dataflow specs/4.data_quality.md
+++ b/documentation/dataflow specs/4.data_quality.md
@@ -7,8 +7,6 @@
   Logs any detected defects into the `dq_issues` table, including missing data, reference mismatches, and parsing issues.  
 - **Author / Date:** Paul – 2026  
 
----
-
 ## 2. Upstream Dependencies
 - Orchestrator module / GitHub Actions workflow
 - Database tables:
@@ -20,16 +18,11 @@
 - Environment variable:
   - `DB_CONNECTION_STRING`
 
----
-
 ## 3. Downstream Dependencies
 - 5.data_update.py
 - Any downstream workflows consuming quality-checked staging data
 
----
-
 ## 4. Inputs / Sources
-
 - **Database Tables:**
   - `stg_fuel_price` – fact table containing staged fuel prices
   - `stg_new_stations` – staging table for newly added stations
@@ -39,17 +32,12 @@
 - **Stored Procedure:**
   - `data_quality_check()`
 
----
-
 ## 5. Outputs
-
 - **Database Table:**
   - `dq_issues` – populated with defect records for each check
 
 - **Logging:**
   - Execution logs recorded in GitHub Actions workflow
-
----
 
 ## 6. Data Quality Checks
 
@@ -61,25 +49,17 @@
 | AD_04     | Parsing Issue     | New stations with missing `street` or `town` columns                                         | SELECT from `stg_new_stations` where `street` IS NULL OR `town` IS NULL |
 | AD_05     | Parsing Issue     | Updated stations with missing `street` or `town` columns                                     | SELECT from `stg_updated_stations` where `street` IS NULL OR `town` IS NULL |
 
----
-
 ## 7. Logic / Processing Overview
-
 1. Establish connection to the PostgreSQL database using `DB_CONNECTION_STRING`.
-2. Call the `public.data_quality_check()` stored procedure.
+2. Call the `data_quality_check()` stored procedure.
 3. Stored procedure executes all checks listed in the table above and inserts results into `dq_issues`.
 4. `ON CONFLICT` ensures duplicate defects are ignored for idempotency.
 5. Logs success/failure to workflow.
 
----
-
 ## 8. Conditional Checks
-
 - Stored procedure execution failure → raises exception
 - Database connection failure → raises exception
 - Any unhandled exception propagates to orchestrator and fails the workflow
-
----
 
 ## 9. Error Handling & Logging
 - Log all major steps, decisions, and URLs accessed  
