Update author date in data quality documentation

--- a/documentation/dataflow specs/4.data_quality.md
+++ b/documentation/dataflow specs/4.data_quality.md
@@ -5,7 +5,7 @@
 - **Purpose:**  
   Performs automated data quality checks on the FuelCheck staging tables by calling the `public.data_quality_check()` stored procedure.  
   Logs any detected defects into the `dq_issues` table, including missing data, reference mismatches, and parsing issues.  
-- **Author / Date:** Paul – 2026  
+- **Author / Date:** Paul – 21 Feb 2026  
 
 ## 2. Upstream Dependencies
 - Orchestrator module / GitHub Actions workflow
